--- a/depository-demo/tsconfig.json
+++ b/depository-demo/tsconfig.json
@@ -11,8 +11,11 @@
     "baseUrl": "./",
     "incremental": true
   },
+  "include": [
+    "src/*.ts"
+  ],
   "exclude": [
-    "../../node_modules",
+    "node_modules",
     "build"
   ]
 }
