--- a/depository-demo/package.json
+++ b/depository-demo/package.json
@@ -1,49 +1,29 @@
 {
   "name": "depository",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
+  "main": "chaincode.js",
+  "license": "Apache-2.0",
   "scripts": {
     "prebuild": "rm -rf build",
     "build": "tsc",
     "postbuild": "rm -rf release",
     "prerelease": "mkdir release",
-    "release": "cp -f build/*.js ./package.json release",
+    "release": "cp -f ./build/*.js ./package.json ./npm-shrinkwrap.json release",
     "dev": "tsc --watch",
     "lint": "eslint ../..",
-    "pretest": "npm run lint",
-    "test": "./node_modules/.bin/nyc mocha --recursive",
-    "start": "fabric-chaincode-node start"
+    "start": "node chaincode.js"
   },
-  "nyc": {
-    "exclude": [
-      "coverage/**",
-      "test/**"
-    ],
-    "reporter": [
-      "text-summary",
-      "html"
-    ],
-    "all": true,
-    "check-coverage": true,
-    "statements": 100,
-    "branches": 100,
-    "functions": 100,
-    "lines": 100
+  "engines": {
+    "node": ">=8.4.0",
+    "npm": ">=5.3.0"
   },
+  "engine-strict": true,
   "dependencies": {
-    "fabric-contract-api": "^2.0.0",
-    "fabric-shim": "^2.1.2",
-    "winston": "^3.2.1"
+    "fabric-shim": "~1.4.0"
   },
   "devDependencies": {
     "@types/node": "^12.7.5",
-    "chai": "^4.2.0",
-    "mocha": "^7.1.1",
-    "nyc": "^15.0.0",
     "prettier": "^1.19.1",
-    "sinon": "^9.0.1",
-    "sinon-chai": "^3.5.0",
     "ts-loader": "^6.1.1",
     "ts-node": "^8.4.1",
     "tsconfig-paths": "^3.9.0",
